<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Police</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_start">Mobile Police</string>
    <string name="title_activity_menu">Mobile Police</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="frag_remote_phone_header">Remote Phone Number</string>
    <string name="frag_remote_pin_header">Remote Phone Pin Number</string>
    <string name="frag_target_phone_header">Target Phone Number</string>
    <string name="navHomeText">Home</string>
    <string name="navSavePinText">Save Pin</string>
    <string name="navExportContactText">Export Contacts</string>
    <string name="navExportSMSText">Export SMS</string>
    <string name="navCallForwardText">Call Forward</string>
    <string name="navRingPhoneText">Ring Phone</string>
    <string name="navCallBackText">Call Back</string>
    <string name="navGetLocationText">Get Location</string>
    <string name="navSettingText">Settings</string>
    <string name="pin_desc">PIN is used to validate that a request being sent to your phone originates from its owner. No request shall be processed without setting an initial PIN. Please enter a PIN number with minimum 4 digits.</string>
    <string name="export_contacts_desc">Get your contacts in an Excel Spreadsheet. You can use this as a backup or an initial data source for synchronizing contacts into other non-google services. Once export is done, contacts.xls can be found on your sdcard root.</string>
    <string name="export_sms_desc">Save your SMS in an Excel Spreadsheet to preserve your message history. Once export is done, sms.xls can be found on your sdcard root.</string>
    <string name="call_fwd_desc">Did you forget your phone at home? Don\'t fret, enable call forwarding remotely using this feature. Enter an accessible phone number(even hardline) and get your calls forwarded.</string>
    <string name="get_location_desc">Lost your Phone? Locate your phone even if your phone\'s GPS or Data is OFF.</string>
    <string name="init_call_desc">Remotely Initiate a call on your phone. You can give the target  phone number as this phone\'s number to listen to the phone\'s surroundings.</string>
    <string name="ring_phone_desc">Unable to find your phone?? Use this feature to Play your phone\'s ringtone at full volume, the tone is played even if the phone is in Silent mode.</string>
    <string name="about_us_header">PyroCrypt</string>
    <string name="about_us">We are gamers, coders, designers and marketeers; Essentially we automate and create stuff! \n\nLeave us a comment in play store and dont forget to rate us. \n\nStay tuned for our next release :)</string>
    <string name="help_header">Getting About</string>
    <string name="mp_title_ver">Mobile Police v1.1.2</string>
    <string name="help_desc">**Install, set your PIN and forget**\n\nHow to test the power of Mobile Police\n\nStep 1: Goto the Save Pin page and set a PIN for youself\n\nStep 2: Set your phone on silent mode\n\nStep 3: Open your SMS application and send yourself the message (case sensitive):\n\n\tMPREQ &lt;your PIN&gt; RING\n\nStep 4: When your SMS is received the phone rings at full volume.\n\nScroll down to check out more exiting features.\n\nMOBILE POLICE\n\nMobile Police is primarily an SMS based remote phone management application. The application allows you to remotely control certain important aspects of your phone like Call Forwarding, Reporting of Phone Location, Making a call, finding a misplaced phone on silent mode etc. The app also give you local features like archival of SMS messages and Phone Contacts into an Excel Spreadsheet.\n\n PIN AUTHENTICATION\n\nA secret pin is an authentication feature to make sure that only remote operation requests with a valid PIN are processed. During first use set the PIN in the Save PIN page, subsequently the PIN can be changed on providing the old PIN. For security consideration PIN cannot be reset or recovered, so DO NOT forget or mistype your PIN. The remote control features won\'t work without setting a PIN.\n\nREMOTE CONTROL FEATURES\n\nOnce you Set the PIN, by default all remote control features are enabled. Specific features can be turned on/off from the settings page.\nYou can initiate remote control in two ways, by using the Mobile Police App installed in another phone, or by sending a request SMS to your phone as mentioned below.\n\nNOTE: The SMS format is case sensitive\n\nSTART CALL FORWARDING\nMPREQ &lt;your PIN&gt; STARTFWD &lt;forward-to-number&gt;\nEg: MPREQ 1234 STARTFWD 9996669990\n\nSTOP CALL FORWARDING\nMPREQ &lt;your PIN&gt; STOPFWD\nEg: MPREQ 1234 STOPFWD\n\nMAKE A CALL\nMPREQ &lt;your PIN&gt; CALL &lt;number-to-call&gt;\nEg: MPREQ 1234 CALL 9996669990\n\nPLAY RINGTONE\nMPREQ &lt;your PIN&gt; RING\nEg: MPREQ 1234 RING\n\nLOCATE PHONE\nMPREQ &lt;your PIN&gt; LOCATE\nEg: MPREQ 1234 LOCATE\n\n\nLOCAL FEATURES\n\nEXPORT CONTACTS: In the export contacts page you can get your phone contacts in an Excel Spreadsheet. You can use this as a backup or an initial data source for synchronizing contacts into other non-google services. Once export is done, contacts.xls can be found on your sdcard root.\n\nEXPORT SMS: In the export SMS page you can save your SMS in an Excel Spreadsheet to preserve your message history. Once export is done, sms.xls can be found on your sdcard root.</string>
	<string name="dialogue_checkbox">Do not show this again</string>
</resources>